subtitle text align + hover bug

--- a/_sass/_content-wrapper.scss
+++ b/_sass/_content-wrapper.scss
@@ -111,6 +111,7 @@
             grid-row-start: 2;
             grid-column-start: 1;
             grid-column-end: 1;
+            text-align: center;
         }
 
         &__subtext {
